Fix: fix DoctorSchedules and api
